<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrdenarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tipo_pizza"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_borde_editext"
            android:backgroundTint="@color/naranja"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/pizza_original"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:buttonTint="@color/white">

            </RadioButton>


            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_italiana"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:buttonTint="@color/white">

            </RadioButton>


            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_crunchy"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:buttonTint="@color/white">

            </RadioButton>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_sarten"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:buttonTint="@color/white">

            </RadioButton>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/tamaño_pizza"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_borde_editext"
            android:backgroundTint="@color/naranja"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_chica"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:buttonTint="@color/white">

            </RadioButton>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_mediana"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:buttonTint="@color/white">

            </RadioButton>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_grande"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:buttonTint="@color/white">

            </RadioButton>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pizza_familiar"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:buttonTint="@color/white">

            </RadioButton>

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/ingredientes_pizza"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_borde_editext"
            android:backgroundTint="@color/naranja"
            android:orientation="vertical">

            <TableRow>

                <CheckBox
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_pepperoni"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

                <CheckBox

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_jamon"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

                <CheckBox
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_carne_molida"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                </CheckBox>
            </TableRow>

            <TableRow>

                <CheckBox
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_tocino"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

                <CheckBox
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_chorizo"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

                <CheckBox

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_pollo"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>


            </TableRow>

            <TableRow>

                <CheckBox

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_champiñones"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

                <CheckBox
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_piña"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

                <CheckBox
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/ingrediente_queso_extra"
                    android:textColor="@color/white"
                    android:textSize="16sp">

                </CheckBox>

            </TableRow>

        </TableLayout>


        <Button
            android:id="@+id/btn_ordenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/verde"
            android:text="@string/ordenar_pizza"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp" />


    </LinearLayout>

</ScrollView>